# gradio-demo

./: README.md  pyproject.toml  pyproject_1.toml  requirements.txt
chatbot/: chatbot_deepseek.py  chatbot_local.py  chatbot_local_ov.py  chatbot_ollama_localllm.py  chatbot_rag_text.py  chatbot_transformers.py  console_chatbot_ollama.py  gradio_chatbot_ollama.py
