[project]
name = "gradio-demo"
version = "0.1.0"
description = "Gradio demo application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "audioop-lts<1.0 ; python_full_version >= '3.13'",
    "authlib==1.6.1",
    "banks==2.2.0",
    "beautifulsoup4==4.13.4",
    "brotli==1.1.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "gradio==5.38.0",
    "gradio-client==1.11.0",
    "greenlet==3.2.3",
    "griffe==1.8.0",
    "groovy==0.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.4",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "langchain==0.0.27",
    "langchain-core==0.3.71",
    "langchain-openai==0.3.28",
    "langsmith==0.4.8",
    "llama-cloud==0.1.32",
    "llama-cloud-services==0.6.43",
    "llama-index==0.12.51",
    "llama-index-agent-openai==0.4.12",
    "llama-index-cli==0.4.4",
    "llama-index-core==0.12.52",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.7.10",
    "llama-index-instrumentation==0.3.0",
    "llama-index-llms-openai==0.4.7",
    "llama-index-multi-modal-llms-openai==0.5.3",
    "llama-index-program-openai==0.3.2",
    "llama-index-question-gen-openai==0.3.1",
    "llama-index-readers-file==0.4.8",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-index-workflows==1.1.0",
    "llama-parse==0.6.43",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mcp==1.10.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "openai==1.97.1",
    "openvino==2025.2.0",
    "openvino-genai==2025.2.0.0",
    "openvino-telemetry==2025.2.0",
    "openvino-tokenizers==2025.2.0.1",
    "orjson==3.11.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic>=2.11 ; sys_platform != 'emscripten'",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pypdf==5.8.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "ruff==0.12.4",
    "ruff>=0.9.3 ; sys_platform != 'emscripten'",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "semantic-version==2.10.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sse-starlette==2.4.1",
    "starlette==0.47.2",
    "starlette>=0.40.0,<1.0 ; sys_platform != 'emscripten'",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tokenizers==0.19.1",
    "tomlkit==0.13.3",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.41.2",
    "typer==0.16.0",
    "typer>=0.12,<1.0 ; sys_platform != 'emscripten'",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "urllib3~=2.0 ; sys_platform == 'emscripten'",
    "uvicorn==0.35.0",
    "uvicorn>=0.14.0 ; sys_platform != 'emscripten'",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
